# pycon-tw-2025-tutorial-reflex

deepseek_r1_chatui/: .gitignore  pyproject.toml
deepseek_r1_rag/: .gitignore  pyproject.toml
deepseek_r1_rag/chat/components/: chat.py
doc/: SETUP_POETRY_CURSOR.md
