[project]
name = "deepseek-r1-chatui"
version = "0.1.0"
description = ""
authors = [
    {name = "milochen0418",email = "milo_chen@mail2000.com.tw"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "reflex (>=0.7.11)",
    "langchain (>=0.3.27,<0.4.0)",
    "ollama (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
