[project]
name = "deepseek-r1-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "milochen0418",email = "milo_chen@mail2000.com.tw"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "reflex (==0.8.9)",
    "ollama (>=0.5.3,<0.6.0)",
    "llama-index (>=0.13.4,<0.14.0)",
    "llama-index-embeddings-huggingface (>=0.6.0,<0.7.0)",
    "llama-index-llms-ollama (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
